# stetho-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml  setup_mac.sh
agents/: graph.py  state.py
agents/edges/: risk_router.py
agents/nodes/: auscultation_node.py  input_validator.py  recommendation_node.py  risk_node.py  symptoms_node.py  synthesis_node.py  vitals_node.py
app/: main.py
app/components/: audio_uploader.py  result_dashboard.py  symptom_input.py  vitals_input.py
config/: app.yaml  ast_model.yaml  literature.yaml  llm.yaml  vitals_reference.yaml
docs/: 01_project_plan.md  02_architecture.md  03_spec.md  04_environment.md  05_checklist.md  todo.md
models/: ast_classifier.py  audio_preprocessor.py  literature_search.py  llm_client.py
prompts/: auscultation_analysis.md  recommendation_general.md  recommendation_professional.md  symptom_analysis.md  synthesis.md  vitals_evaluation.md
schemas/: __init__.py  auscultation.py  literature.py  report.py  symptoms.py  vitals.py
tests/: conftest.py  test_agent_graph.py  test_ast_classifier.py  test_audio_preprocessor.py  test_config.py  test_device.py  test_literature_search.py  test_llm_client.py  test_nodes.py  test_schemas.py
utils/: audio_utils.py  config_loader.py  device_utils.py  visualization.py
